--- a/templates/error.html
+++ b/templates/error.html
@@ -70,7 +70,9 @@
                         <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
                     </div> -->
                     <div class="col-lg-6 text-lg-end">
+                        <br>
                         <a class="btn btn-dark btn-social mx-2" href="https://gitlab.com/Baldur10/drug-discovery-al.git"><i class="fab fa-gitlab"></i></a>
+                        <br>
                     </div>
                 </div>
             </div>
@@ -86,11 +88,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="{{url_for('static',filename='templates/js/scripts.js')}}"></script>
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <!-- * *                               SB Forms JS                               * *-->
-        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+        <script src="{{url_for('static',filename='js/scripts.js')}}"></script>
     </body>
 </html>
