--- a/templates/predictions.html
+++ b/templates/predictions.html
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top"><img src="{{url_for('static',filename='assets/img/logos/whaleLogo.png')}}" alt="..." /> <span style="color: #e4047c;">Fleming</span></a>
+                <a class="navbar-brand" href="#page-top"><img src="{{ url_for('static',filename='assets/img/logos/whaleLogo.png') }}" alt="..." /> <span style="color: #e4047c;">Fleming</span></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
@@ -49,14 +49,12 @@
                 </div>
                 <br>
                 <div>
-                    <table class="table-bordered text-light" style="width:100%;border: 2px solid black; border-collapse: collapse; padding: 5px; ;">
+                    <table id="predictions-table" class="table-bordered text-light" style="width:100%;border: 2px solid black; border-collapse: collapse; padding: 5px; ;">
                         <tr><th>Number</th><th>Smiles String</th><th>Predicted expt_pIC50 Value</th></tr>
-                        <tr><td>0</td><td>{{ results[0].mol }}</td><td>{{ results[0].potency }}</td></tr>
-                        <tr><td>1</td><td>{{ results[1].mol }}</td><td>{{ results[1].potency }}</td></tr>
-                        <tr><td>2</td><td>{{ results[2].mol }}</td><td>{{ results[2].potency }}</td></tr>
-                        <tr><td>3</td><td>{{ results[3].mol }}</td><td>{{ results[3].potency }}</td></tr>
-                        <tr><td>4</td><td>{{ results[4].mol }}</td><td>{{ results[4].potency }}</td></tr>
-                        <tr><td>5</td><td>{{ results[5].mol }}</td><td>{{ results[5].potency }}</td></tr>
+                        <script type="text/javascript" src="{{url_for('static',filename='js/table_manager.js')}}"></script>
+                        <script type="text/javascript">
+                            renderDataInTheTable('{{ results|tojson }}');
+                        </script>
                     </table>
                 </div>
                 <br>
@@ -89,16 +87,12 @@
                 .withFailureHandler(onFailure)
                 .withSuccessHandler(addListValues)
                 .getList();
+
             }
         </script>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="{{url_for('static',filename='templates/js/scripts.js')}}"></script>
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <!-- * *                               SB Forms JS                               * *-->
-        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+        <script src="{{url_for('static',filename='js/scripts.js')}}"></script>
     </body>
 </html>
