--- a/templates/predictions.html
+++ b/templates/predictions.html
@@ -67,17 +67,23 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-6 text-lg-start">Application Developed by - <a href="https://github.com/Baldur10">Rahil Raj Mohan</a></div>
-                    <div class="col-lg-6 text-lg-start">Website template - Courtesy of <a href="https://github.com/Baldur10">D3NCITY</a></div>
-                    <div class="col-lg-6 text-lg-start"><a href="https://www.vecteezy.com/free-vector/flowing-lines">Flowing Lines Vectors by Vecteezy</a></div>
-                    <!-- <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                    </div> -->
-                    <div class="col-lg-6 text-lg-end">
+                    <div class="col-lg-12">Application Developed by - <a href="https://github.com/Baldur10">Rahil Raj Mohan</a></div>
+                    <br>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col-lg-12">Website template - Modified form <a href="https://github.com/d3ncity">D3NCITY</a></div>
+                    <br>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col-lg-12"><a href="https://www.vecteezy.com/free-vector/flowing-lines">Flowing Lines Vectors by Vecteezy</a></div>
+                    <br>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col-lg-12">
                         <a class="btn btn-dark btn-social mx-2" href="https://gitlab.com/Baldur10/drug-discovery-al.git"><i class="fab fa-gitlab"></i></a>
                     </div>
+                </div>
+                    <br>
                 </div>
             </div>
         </footer>
