--- a/templates/index.html
+++ b/templates/index.html
@@ -51,21 +51,21 @@
                     <h3 class="section-subheading text-muted">Machine Learning Models available</h3>
                 </div>
                 <div class="row text-center">
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <img src="{{url_for('static',filename='assets/img/logos/gaussian.png')}}" loading="lazy" alt="..." style="max-width: 50%;border-radius: 75%;"/>
                         </span>
                         <h4 class="my-3">Gaussian Processes</h4>
                         <p class="text-muted">Implementation of SciKit-Learn's Gaussian Processes Regressor wrapped by modAL's BayesianOptimizar class</p>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <img src="{{url_for('static',filename='assets/img/logos/trees.png')}}" loading="lazy" alt="..." style="max-width: 50%;border-radius: 75%;"/>
                         </span>
                         <h4 class="my-3">Random Forest</h4>
                         <p class="text-muted">Query by Committee model containing the Random Forest Regressor from Intel's Scikit-Learn acceleration suite.</p>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <img src="{{url_for('static',filename='assets/img/logos/neural-network.png')}}" loading="lazy" alt="..." style="max-width: 50%;border-radius: 75%;"/>
                         </span>
@@ -128,20 +128,22 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-6 text-lg-start">Application Developed by - <a href="https://github.com/Baldur10">Rahil Raj Mohan</a></div>
+                    <div class="col-lg-12">Application Developed by - <a href="https://github.com/Baldur10">Rahil Raj Mohan</a></div>
                     <br>
-                    <div class="col-lg-6 text-lg-start">Website template - Courtesy of <a href="https://github.com/Baldur10">D3NCITY</a></div>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col-lg-12">Website template - Modified form <a href="https://github.com/d3ncity">D3NCITY</a></div>
                     <br>
-                    <div class="col-lg-6 text-lg-start"><a href="https://www.vecteezy.com/free-vector/flowing-lines">Flowing Lines Vectors by Vecteezy</a></div>
-                    <!-- <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                    </div> -->
+                </div>
+                <div class="row align-items-center">
+                    <div class="col-lg-12"><a href="https://www.vecteezy.com/free-vector/flowing-lines">Flowing Lines Vectors by Vecteezy</a></div>
                     <br>
-                    <div class="col-lg-6 text-lg-end">
+                </div>
+                <div class="row align-items-center">
+                    <div class="col-lg-12">
                         <a class="btn btn-dark btn-social mx-2" href="https://gitlab.com/Baldur10/drug-discovery-al.git"><i class="fab fa-gitlab"></i></a>
                     </div>
+                </div>
                     <br>
                 </div>
             </div>
